WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246242
The EUC-TW encoding doesn't have a canonical name
https://bugs.webkit.org/show_bug.cgi?id=246242
Summary
The EUC-TW encoding doesn't have a canonical name
Myles C. Maxfield
Reported
2022-10-07 18:05:52 PDT
The EUC-TW encoding doesn't have a canonical name
Attachments
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-10-07 18:06:07 PDT
<
rdar://problem/100893154
>
Myles C. Maxfield
Comment 2
2022-10-07 18:10:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5160
EWS
Comment 3
2022-11-07 22:25:15 PST
Committed
256438@main
(996fc9db28be): <
https://commits.webkit.org/256438@main
> Reviewed commits have been landed. Closing PR #5160 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug