Cherry-pick 996fc9db28be. rdar://problem/100893154

The EUC-TW encoding doesn't have a canonical name
    https://bugs.webkit.org/show_bug.cgi?id=246242
    rdar://100893154

    Reviewed by Alex Christensen.

    ucnv_getCanonicalName("EUC-TW", "IANA") is returning nullptr, which is causing
    us to memcmp(nullptr, ...). This patch reorganizes the file to call ucnv_getName()
    in the situations where ucnv_getCanonicalName() is returning nullptr, thereby
    elliminating the need for all the special cases.

    Test: imported/w3c/web-platform-tests/encoding/unsupported-labels.html

    * Source/WebCore/PAL/pal/text/TextCodecICU.cpp:
    (PAL::TextCodecICU::registerCodecs):
    (PAL::TextCodecICU::TextCodecICU):

    Canonical link: https://commits.webkit.org/256438@main

Canonical link: https://commits.webkit.org/252432.815@safari-7614.3.7.1-branch